K8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress 

metadata:
  name: clickmart-ingress
  namespace: clickmart

spec:
  ingressClassName: nginx

  rules:
    - host: clickmart.local
      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend-service
                port:
                  number: 80

          - path: /api
            pathType: Prefix

            backend:
              service:
                name: backend-service
                port:
                  number: 8000

          - path: /admin
            pathType: Prefix

            backend:
              service:
                name: backend-service
                port:
                  number: 8000

          - path: /health
            pathType: Prefix 

            backend:
              service:
                name: backend-service
                port:
                  number: 8000
